# esp32-stuff-server

./: .gitignore  Cargo.toml
actual/: Cargo.toml
actual/src/: _main.rs  dhcp.rs  http_task.rs  main.rs  router.rs  types.rs
actual/src/examples/: async_blinky.rs  first_example_sd_card.rs  random_stuff.rs
db_engine/: Cargo.toml  Makefile
db_engine/src/: bit.rs  btree.rs  buffer.rs  db.rs  embedded_sdmmc_ram_device.rs  file_handler.rs  fs.rs  lib.rs  macros.rs  overflow.rs  page_buf.rs  page_free_list.rs  page_rw.rs  query.rs  serde_row.rs  table.rs  types.rs  wal.rs
db_engine/src/embedded_sdmmc_ram_device/: allocators.rs  block_device.rs  esp_alloc.rs  fs.rs  timesource.rs
development/: Cargo.toml
development/src/: allocators.rs  block_device.rs  consts.rs  main.rs
development/src/html/: dir_page.html  file_page.html  files.html
file_manager/: Cargo.toml
file_manager/src/: embassy_impl.rs  lib.rs  tokio_impl.rs
file_manager/src/runtime/: embassy_rt.rs  mod.rs  tokio_rt.rs
server/: Cargo.toml
server/src/: chunks.rs  file_uploader.rs  lib.rs
server/src/html/: dir_page.html  file_page.html  files.html  home.html
src/: ap_router.rs  dhcp.rs  event_handler.rs  http_task.rs  main.rs  router.rs  sta_config.rs  sta_router.rs  types.rs
src/ap_client/: index.html
src/html/: config.html  home.html
