[package]
edition      = "2024"
name         = "stuff-server"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "stuff-server"
path = "./src/main.rs"

[dependencies]
log = { version = "0.4" }
esp-hal = { version = "~1.0", features = ["esp32", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = [
    "esp32",
    "panic-handler",
    "println",
]}
esp-alloc = { version = "0.9.0", features = ["esp32"] }
esp-storage = { version = "0.8.1", features = ["esp32"] }
embedded-sdmmc = "0.9.0"
embedded-hal-bus = "0.3.0"
embedded-hal = "1.0.0"
embedded-storage = "0.3.1"
esp-radio = { version = "0.17.0", features = ["esp32", "wifi", "esp-alloc", "log-04"] }
esp-rtos = { version = "0.2.0", features = ["log-04", "esp32", "embassy", "esp-radio", "esp-alloc"] }
embassy-net = { version = "0.7.1", features = ["tcp", "dhcpv4", "log"] }
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = { version = "0.5.0" }
embassy-sync = { version = "0.7.2" }
static_cell = { version = "2.1.1", features = ["nightly"] }
leasehund = { version = "0.2.0" }
heapless = { version = "0.8.0" }
picoserve = { version = "0.17.1", features = ["embassy", "ws", "log", "json"] }
enumset = { version = "1.1.10" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.1.3" }
embassy-futures = { version = "0.1.2" }


[profile.dev]
# opt-level = "s"
opt-level = 3

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
