[package]
name = "development"
version = "0.1.0"
edition = "2024"

[dependencies]
allocator-api2 = { version = "0.3", default-features = false, features = ["alloc"] }
embassy-time = { version = "0.5.0" }
embassy-sync = { version = "0.7.2" }
static_cell = { version = "2.1.1", features = ["nightly"] }
heapless = { version = "0.8.0" }
picoserve = { version = "0.17.1", features = ["ws", "log", "json", "tokio"] }
enumset = { version = "1.1.10" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.1.3" }
tokio = { version = "1.49.0", features = ["full"] }
embedded-sdmmc = "0.9.0"
buddy_system_allocator = "0.12.0"
alpa = { path = "../../../alpa", features = ["std"] }
rand = "0.9.2"
file_manager = { path = "../file_manager", features = ["tokio"] }
server = { path = "../server", features = ["std-mode"] }
