[package]
name = "file_manager"
version = "0.1.0"
edition = "2024"

[features]
tokio = ["dep:tokio"]
embassy = ["dep:embassy-sync", "dep:embedded-hal", "dep:esp-hal", "dep:embedded-hal-bus", "dep:esp-alloc"]

[dependencies]
tokio = { version = "1.49.0", features = ["full"], optional = true }
embassy-sync = { version = "0.7.2", optional = true }
embedded-sdmmc = "0.9.0"
alpa = { path = "../../../alpa" }
esp-alloc = { version = "0.9.0", features = ["esp32", "nightly"], optional = true }
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-bus = { version = "0.3.0", optional = true }
esp-hal = { version = "~1.0", features = ["esp32", "unstable", "psram"], optional = true }
allocator-api2 = { version = "0.3", default-features = false, features = ["alloc"] }
