[package]
name = "server"
version = "0.1.0"
edition = "2024"

# [dependencies]
# allocator-api2 = { version = "0.3", default-features = false, features = ["alloc"] }
# # picoserve = { version = "0.17.1", features = ["ws", "log", "json", "tokio"] }
# picoserve = { version = "0.17.1", features = ["log", "json"] }
# embedded-sdmmc = "0.9.0"
# alpa = { path = "../../../alpa", features = [] }
# # file_manager = { path = "../file_manager", features = ["tokio"] }
# file_manager = { path = "../file_manager", features = ["embassy"] }

[dependencies]
allocator-api2 = { version = "0.3", default-features = false, features = ["alloc"] }
embedded-sdmmc = "0.9.0"
embassy-executor = { version = "0.9.1", features = [], optional = true }
esp-alloc = { version = "0.9.0", features = ["esp32", "nightly"], optional = true }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"], optional = true }
embassy-futures = { version = "0.1.2", optional = true }
tokio = { version = "1.49.0", optional = true }

alpa = { path = "../../../alpa", default-features = false }
file_manager = { path = "../file_manager" }
picoserve = { version = "0.17.1", features = ["log", "json"] }

[features]
std-mode = [
    "alpa/std", 
    "file_manager/tokio", 
    "picoserve/tokio",
    "picoserve/ws",
	"tokio"
]
embassy-mode = [
    "file_manager/embassy",
    "esp-alloc",
    "esp-println",
	"embassy-executor",
    "embassy-futures",
]
